# muffin-donald

./: .bumpversion.cfg  .git-commits.yaml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  tests.py
.github/workflows/: release.yml  tests.yml
muffin_donald/: __init__.py
requirements/: requirements.txt
tests/: conftest.py  test_config.py  test_healthcheck.py  test_lifecycle.py  test_scheduler.py  test_tasks.py
