[project]
name = "muffin-donald"
version = "1.0.3"
description = "It's a plugin for Muffin framework which provides support for external APIs"
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
license = "MIT"
keywords = ["muffin", "asyncio", "trio", "curio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: AsyncIO",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["muffin", "donald"]

[project.urls]
Homepage = "https://github.com/klen/muffin-donald"
Repository = "https://github.com/klen/muffin-donald"

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "pytest-mypy",
  "pytest-aio[curio, trio]",
  "pre-commit",
  "muffin_sentry",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "muffin_donald"
module-root = ""

[tool.pytest.ini_options]
addopts = "-xsv tests/"
log_cli = true

[tool.mypy]
packages = ["muffin_donald"]
install_types = true
non_interactive = true
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py311,py312,py313,pypy10

[testenv]
deps = -e .[tests]
commands =
	pytest --mypy tests.py

[testenv:pypy10]
deps = -e .[tests]
commands =
	pytest tests.py
"""

[tool.ruff]
fix = true
line-length = 100
target-version = "py310"
exclude = [".venv", "docs", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",
  "UP",
  "ANN",
  "DJ",
  "EM",
  "RSE",
  "SLF",
  "RET",
  "S101",
  "PLR2004",
  "PLR0912",
  "N804",
  "A003",
  "TRY003",
]

[tool.bumpversion]
current_version = "0.10.4"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
